--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 .App {
   text-align: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .App-logo {
@@ -35,4 +39,16 @@
   to {
     transform: rotate(360deg);
   }
+}
+.box{
+  border: 1px solid #053742;
+  border-radius: 4px;
+  padding: 20px;
+  width: inherit;
+  color: white;
+  background-color: #053742;
+
+}
+.box p{
+  margin: 5px 0px;
 }
