--- a/src/Line.css
+++ b/src/Line.css
@@ -1,8 +1,8 @@
-.line{
+/* .line{
    margin-left: 20.5%;
     @media (max-width: 769px) {
         padding: 2rem 0;
     
         text-align: center;
       }
-}
+} */
